[package]
name = "swamp-script"
version = "0.1.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "script language for embedding"

[dependencies]
tiny-ver = "0.1.2"
swamp-script-source-map = { path = "../source-map", version = "0.1.8" }

# Parser
swamp-script-parser = { path = "../parser", version = "0.1.8" } # TODO: This is only for an error. parser should not be a dependency

# Semantic and Analyzer
swamp-script-semantic = { path = "../semantic", version = "0.1.8" }
swamp-script-types = { path = "../types", version = "0.1.8" }
swamp-script-node = { path = "../node", version = "0.1.8" }
swamp-script-analyzer = { path = "../analyzer", version = "0.1.8" }
swamp-script-core = { path = "../core", version = "0.1.8" }
swamp-script-modules = { path = "../modules", version = "0.1.8" }
swamp-script-compile = { path = "../compile", version = "0.1.8" }

swamp-script-error-report = { path = "../err", version = "0.1.8" }

# Core and Std
swamp-script-core-extra = { path = "../core-extra", version = "0.1.8" }
swamp-script-std = { path = "../std", version = "0.1.8" }


swamp-script-dep-loader = { path = "../dep-loader", version = "0.1.8" }
swamp-script-eval-loader = { path = "../eval-loader", version = "0.1.8" }
swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.8" }

# Runner
swamp-script-eval = { path = "../eval", version = "0.1.8" }

swamp-script-code-gen-program = { path = "../code-gen-program", version = "0.1.8" }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
tracing = "0.1.40"
