[package]
name = "swamp-script-types"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "types used in Swamp"


[dependencies]
seq-fmt = "0.0.1"
seq-map = "0.0.13"
swamp-script-node = { path = "../node", version = "0.1.10" }
tracing = "0.1.40"
