[package]
name = "swamp-vm-disasm"
version = "0.0.14"
edition = "2024"
license = "MIT"
description = "disassembler for the opcodes in the swamp vm"
repository = "https://github.com/swamp/swamp"

[dependencies]
swamp-vm-types = { path = "../vm-types", version = "0.0.14" }

yansi = "1.0.1"
seq-map = "0.0.13"
