[package]
name = "swamp-script-vm-test"
version = "0.1.3"
edition = "2024"

[dependencies]
swamp-script-vm = { path = "../vm", version = "0.1.3", features = ["debug_vm"]}
swamp-script-code-gen = { path = "../code-gen", version = "0.1.3"}
swamp-script-compile = { path = "../compile", version = "0.1.3"}
hexify = "0.0.3"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
swamp-script-types = { path = "../types", version = "0.1.3"}
