[package]
name = "swamp-script-vm-test"
version = "0.1.3"
edition = "2024"

[dependencies]
swamp-vm = { path = "../vm", version = "0.1.3", features = [] }
swamp-script-code-gen = { path = "../code-gen", version = "0.1.3" }
swamp-script-compile = { path = "../compile", version = "0.1.3" }
hexify = "0.0.3"
swamp-script-types = { path = "../types", version = "0.1.3" }
swamp-vm-disasm = { path = "../disasm", version = "0.1.3"}

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }

[[bench]]
name = "benchmark"
harness = false
