[package]
name = "swamp-script-vm-test"
version = "0.1.7"
edition = "2024"
license = "MIT"
description = "examples and tests on how to use the swamp vm with swamp script"
repository = "https://github.com/swamp/script"

[dependencies]
swamp-vm = { path = "../vm", version = "0.1.7", features = [] }
swamp-vm-types = { path = "../vm-types", version = "0.1.7", features = [] }
swamp-script-code-gen = { path = "../code-gen", version = "0.1.7" }
swamp-script-compile = { path = "../compile", version = "0.1.7" }
hexify = "0.0.3"
swamp-script-types = { path = "../types", version = "0.1.7" }
swamp-script-semantic = { path = "../semantic", version = "0.1.7" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.7" }
swamp-script-code-gen-program = { path = "../code-gen-program", version = "0.1.7" }
swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.7"}

tracing = "0.1.40"
seq-map = "0.0.13"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }

[[bench]]
name = "benchmark"
harness = false
