[package]
name = "swamp-vm"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "Minimial virtual machine"
repository = "https://github.com/swamp/swamp"


[dependencies]
swamp-vm-types = { path = "../vm-types", version = "0.1.10" }
seq-map = "0.0.13"

[features]
debug_vm = []  # Enable VM debug output
